# rexf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLEANUP_ANALYSIS.md  GITHUB_ACTIONS_SUMMARY.md  LIBRARY_OVERVIEW.md  LICENSE  MANIFEST.in  PACKAGING_CHECKLIST.md  README.md  USAGE.md  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_simple_api.py
.github/: GITHUB_ACTIONS_SETUP.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: advanced_features.rst  basic_usage.rst  cli_tools.rst  conf.py  contributing.rst  index.rst  quickstart.rst  reproducibility.rst  requirements.txt  web_dashboard.rst
docs/api/: core.rst  run.rst
docs/tutorials/: monte_carlo.rst
examples/: __init__.py  comprehensive_demo.py  monte_carlo_pi.py  monte_carlo_pi_demo.py  simple_demo.py
rexf/: __init__.py  artifacts.py  decorators.py  export.py  interfaces.py  py.typed  run.py  runner.py  storage.py  visualization.py
rexf/backends/: __init__.py  filesystem_artifacts.py  intelligent_storage.py  sqlite_storage.py
rexf/cli/: __init__.py  analytics.py
rexf/core/: __init__.py  decorators.py  interfaces.py  models.py  runner.py  simple_api.py
rexf/dashboard/: __init__.py  app.py
rexf/intelligence/: __init__.py  exploration.py  insights.py  queries.py  smart_compare.py  suggestions.py
rexf/plugins/: __init__.py  export.py  visualization.py
tests/: __init__.py  conftest.py  test_basic.py  test_cli.py  test_core_api.py  test_dashboard.py  test_intelligence.py  test_simple_api.py  test_simple_clean.py  test_storage.py
